# rucode-find-investor

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  requirements.in  requirements.txt  test_gen.py  test_load.py
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  documentation.md  experiment.md  feature_request.md  question.md  refactor.md
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  documentation.md  experiment.md  feature_request.md  question.md  refactor.md
app/: main.py
app/templates/: index.html
data/: X_val.pkl  test_df.pkl  y_val.pkl
models/: model.cbm
notebooks/: test_data_generation.ipynb
src/: data.py  model_training.py  train.py
